// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAvailableActions returns the correct actions for "DECLARED" status with a "declared:requested" flag 1`] = `
[
  "READ",
  "CUSTOM",
]
`;

exports[`getAvailableActions returns the correct actions for "REGISTERED" status with a "registered:requested" flag 1`] = `
[
  "READ",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "ARCHIVED" status with no flags 1`] = `
[
  "READ",
  "ASSIGN",
  "UNASSIGN",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "CREATED" status with no flags 1`] = `
[
  "READ",
  "DECLARE",
  "NOTIFY",
  "DELETE",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "DECLARED" status with no flags 1`] = `
[
  "READ",
  "VALIDATE",
  "ARCHIVE",
  "REJECT",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "DECLARED" status with rejected flag 1`] = `
[
  "READ",
  "DECLARE",
  "NOTIFY",
  "CUSTOM",
  "ARCHIVE",
]
`;

exports[`getAvailableActions should return the correct actions for "NOTIFIED" status with no flags 1`] = `
[
  "READ",
  "DECLARE",
  "ARCHIVE",
  "REJECT",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "NOTIFIED" status with rejected flag 1`] = `
[
  "READ",
  "DECLARE",
  "NOTIFY",
  "CUSTOM",
  "ARCHIVE",
]
`;

exports[`getAvailableActions should return the correct actions for "REGISTERED" status with "registered:requested" correction-requested flag 1`] = `
[
  "READ",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "REGISTERED" status with correction-requested flag 1`] = `
[
  "READ",
  "APPROVE_CORRECTION",
  "REJECT_CORRECTION",
  "CUSTOM",
  "REVIEW_CORRECTION_REQUEST",
]
`;

exports[`getAvailableActions should return the correct actions for "REGISTERED" status with no flags 1`] = `
[
  "READ",
  "PRINT_CERTIFICATE",
  "REQUEST_CORRECTION",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "VALIDATED" status with no flags 1`] = `
[
  "READ",
  "REGISTER",
  "ARCHIVE",
  "REJECT",
  "CUSTOM",
]
`;

exports[`getAvailableActions should return the correct actions for "VALIDATED" status with rejected flag 1`] = `
[
  "READ",
  "VALIDATE",
  "ARCHIVE",
  "CUSTOM",
]
`;
